[package]
name = "xconverter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xsynth-core = { git = "https://github.com/arduano/xsynth.git", rev = "7875b93" }
xsynth-realtime = { git = "https://github.com/arduano/xsynth.git", rev = "7875b93" }
xsynth-render = { git = "https://github.com/arduano/xsynth.git", rev = "7875b93" }
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs", rev = "907dec1" }
egui = "0.19.0"
eframe = "0.19.0"
env = "0.0.0"
spin_sleep = "1.0.0"
rodio = "0.16.0"
async-std = "1.12.0"
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "0.1.59"
discord-rich-presence = "0.2.3"