[package]
name = "xconverter"
authors = ["AtomSnow"]

version = "0.1.0"

edition = "2021"
rust-version = "1.67.0"

[dependencies]
xsynth-core = { git = "https://github.com/arduano/xsynth.git" }
xsynth-realtime = { git = "https://github.com/arduano/xsynth.git" }
xsynth-render = { git = "https://github.com/arduano/xsynth.git" }
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs" }
egui = "0.19.0"
eframe = "0.19.0"
env = "0.0.0"
spin_sleep = "1.0.0"
rodio = "0.16.0"
discord-rich-presence = "0.2.3"